--- a/tom_dataproducts/templates/tom_dataproducts/upload_dataproduct.html
+++ b/tom_dataproducts/templates/tom_dataproducts/upload_dataproduct.html
@@ -1,14 +1,19 @@
-{% load bootstrap4 static %}
+{% load bootstrap4 static crispy_forms_tags %}
 {% if user.is_authenticated %}
+{% bootstrap_javascript jquery='slim' %}
+<script>
+  function getType() {
+    tab = $('#data_upload_tabs .nav-item .active').text();
+    console.log('hello');
+    console.log(tab.toLowerCase());
+    $('#id_data_product_type').val(tab.toLowerCase());
+  }
+</script>
 <h4>Upload a data product</h4>
 <p>
   For example CSVs, see the <a href="{% static 'tom_dataproducts/photometry_sample.csv' %}">photometry</a> and <a href="{% static 'tom_dataproducts/spectrum_sample.csv' %}">spectroscopy</a> sample files. FITS is supported for spectra.
 </p>
-<form method="POST" action="{% url 'tom_dataproducts:upload' %}" enctype="multipart/form-data">
-  {% csrf_token %}
-  {% bootstrap_form data_product_form %}
-  {% buttons %}
-  <input type="submit" class="btn btn-primary" value="Upload" name="upload_dataproduct_form">
-  {% endbuttons %}
+<form action="{% url 'tom_dataproducts:upload' %}" method="POST" onsubmit="getType()" enctype="multipart/form-data">
+  {% crispy data_product_form %}
 </form>
 {% endif %}
