--- a/tom_dataproducts/templates/tom_dataproducts/partials/dataproduct_list_for_target.html
+++ b/tom_dataproducts/templates/tom_dataproducts/partials/dataproduct_list_for_target.html
@@ -18,10 +18,7 @@
       </td>
       <td><a href="{{ product.data.url }}">{{ product.get_file_name }}</a></td>
       <td>
-        {% if product.data_product_type %}
-          {{ product.get_type_display }}
-        {% endif %}
-        </a>
+        {{ product.data_product_type }}
       </td>
       <td><a href="{% url 'tom_dataproducts:delete' product.id %}" class="btn btn-danger">Delete</a></td>
     </tr>
