--- a/tom_targets/templates/tom_targets/target_list.html
+++ b/tom_targets/templates/tom_targets/target_list.html
@@ -1,5 +1,6 @@
 {% extends 'tom_common/base.html' %}
 {% load bootstrap4 targets_extras %}
+{% load nonsidereal_airmass_extras %}
 {% block title %}Targets{% endblock %}
 {% block content %}
 <div class="row">
@@ -24,7 +25,7 @@
       </div>
     </div>
     {% select_target_js %}
-    {% target_distribution filter.qs %}
+    {% target_distribution_nonsidereal filter.qs %}
     {% bootstrap_pagination page_obj extra=request.GET.urlencode %}
     <label id="displaySelected"></label>
     <button id="optionSelectAll" type="button" class="btn btn-link" onClick="select_all({{ target_count }})"></button>
