--- a/tom_targets/templates/tom_targets/partials/target_data.html
+++ b/tom_targets/templates/tom_targets/partials/target_data.html
@@ -11,12 +11,19 @@
   {% for key, value in target.as_dict.items %}
   {% if value and key != 'name' %}
     {% if key == 'eph_json' %}
-    <dt class="col-sm-6">Typical RA</dt>
-    <dd class="col-sm-6">{{ value|eph_json_to_value_ra }}</dd>
-    <dt class="col-sm-6">Typical Dec</dt>
-    <dd class="col-sm-6">{{ value|eph_json_to_value_dec }}</dd>
-    <dt class="col-sm-6">At MJD</dt>
-    <dd class="col-sm-6">{{ value|eph_json_to_value_mjd }}</dd>
+      {% if value != 'None' %}
+        <dt class="col-sm-6">Typical RA</dt>
+        <dd class="col-sm-6">{{ value|eph_json_to_value_ra }}</dd>
+        <dt class="col-sm-6">Typical Dec</dt>
+        <dd class="col-sm-6">{{ value|eph_json_to_value_dec }}</dd>
+        <dt class="col-sm-6">At MJD</dt>
+        <dd class="col-sm-6">{{ value|eph_json_to_value_mjd }}</dd>
+      {% else %}
+        <dt class="col-sm-6">Today's RA</dt>
+        <dd class="col-sm-6">{{ target.names|non_sidereal_ra }}</dd>
+        <dt class="col-sm-6">Today's Dec</dt>
+        <dd class="col-sm-6">{{ target.names|non_sidereal_dec }}</dd>
+      {% endif %}
     {% else %}
       <dt class="col-sm-6">{% verbose_name target key %}</dt>
       <dd class="col-sm-6">{{ value|truncate_number }}</dd>
