--added SSOIS query button + changes to allow EPHEMERIS target updates

--- a/tom_targets/templates/tom_targets/partials/target_ssois.html
+++ b/tom_targets/templates/tom_targets/partials/target_ssois.html
@@ -1,1 +1,1 @@
-<a href="{% url 'tom_targets:ssois' pk=target.id %}" title="SSOIS" class="btn  btn-primary">SSOIS</a>
+<a href="{% url 'tom_targets:ssois' pk=target %}" title="SSOIS" class="btn  btn-primary">SSOIS</a>
