--- a/tom_targets/templates/tom_targets/target_detail.html
+++ b/tom_targets/templates/tom_targets/target_detail.html
@@ -17,12 +17,14 @@
       </div>
       {% endif %}
       {% target_buttons object %}
+      {% if object.type == 'NON_SIDEREAL' %}
+      {% target_ssois object %}
+      {% endif %}
       {% target_data object %}
       {% recent_photometry object limit=3 %}
       {% if object.type == 'SIDEREAL' %}
       {% aladin object %}
       {% endif %}
-      {% target_ssois object %}
     </div>
   </div>
   <div class="col-md-8">
