--- a/tom_targets/templates/tom_targets/partials/aladin.html
+++ b/tom_targets/templates/tom_targets/partials/aladin.html
@@ -1,7 +1,7 @@
 <!-- include Aladin Lite CSS file in the head section of your page -->
 <link rel="stylesheet" href="//aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 <!-- insert this snippet where you want Aladin Lite viewer to appear and after the loading of jQuery -->
-<h3>Survey View</h3>
+<h3 style="margin-top:1cm;">Survey View</h3>
 <div id="aladin-lite-div" style="width:300px;height:300px;"></div>
 <div id="chart-form-div" style="width:300px;">
   <form id="chart-form">
