--- a/tom_targets/templates/tom_targets/target_detail.html
+++ b/tom_targets/templates/tom_targets/target_detail.html
@@ -1,5 +1,5 @@
 {% extends 'tom_common/base.html' %}
-{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras publication_extras static cache nonsidereal_airmass_extras%}
+{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras publication_extras static cache nonsidereal_airmass_extras %}
 {% block title %}Target {{ object.name }}{% endblock %}
 {% block additional_css %}
 <link rel="stylesheet" href="{% static 'tom_common/css/main.css' %}">
@@ -24,6 +24,8 @@
       {% recent_photometry object limit=3 %}
       {% if object.type == 'SIDEREAL' %}
       {% aladin object %}
+      {% elif object.type == 'NON_SIDEREAL' %}
+      {% aladin_nonsidereal %}
       {% endif %}
     </div>
   </div>
