-- a lot of stuff so D. can see what's going wrong

--- a/tom_targets/templates/tom_targets/partials/aladin.html
+++ b/tom_targets/templates/tom_targets/partials/aladin.html
@@ -45,7 +45,7 @@
 <script type="text/javascript">
 
     let aladin = A.aladin('#aladin-lite-div', {
-      survey: "P/DSS2/color",
+      survey: "P/PanSTARRS/DR1/color/z/zg/g",
       fov: getFovAsDegreesFromForm(),
       showReticle: false,
       target: "{{ target.ra }} {{ target.dec }}",
