--- a/tom_observations/templates/tom_observations/observation_form.html
+++ b/tom_observations/templates/tom_observations/observation_form.html
@@ -30,6 +30,11 @@
             Lunar Distance
             {% moon_distance target %}
         </div>
+          {% if target.type == 'SIDEREAL' %}
+          {% aladin target %}
+          {% elif target.type == 'NON_SIDEREAL' %}
+          {% aladin_nonsidereal %}
+          {% endif %}
     </div>
     <div class="col-md-6">
         <ul class="nav nav-tabs" id="tabs">
