--- a/tom_observations/templates/tom_observations/partials/tile_plan.html
+++ b/tom_observations/templates/tom_observations/partials/tile_plan.html
@@ -1,11 +1,8 @@
-{% load bootstrap4 %}
+{% load bootstrap4 crispy_forms_tags %}
 <div id="tile-panel">
   <form action="{% url 'targets:detail' target.id %}" method="GET" class="form">
     {% csrf_token %}
-    {% bootstrap_form form %}
-    {% buttons %}
-    <input type="submit" class="btn btn-primary" value="Tile">
-    {% endbuttons %}
+    {% crispy form %}
   </form>
-  {{ tile_graph|safe }} 
+  {{ tile_graph|safe }}
 </div>
