--- a/tom_observations/templates/tom_observations/observation_form.html
+++ b/tom_observations/templates/tom_observations/observation_form.html
@@ -33,7 +33,8 @@
           {% if target.type == 'SIDEREAL' %}
           {% aladin target %}
           {% elif target.type == 'NON_SIDEREAL' %}
-          {% aladin_nonsidereal %}
+          {% aladin_nonsidereal_observations %}
+          {% tile_plan_observations %}
           {% endif %}
     </div>
     <div class="col-md-6">
